Corrected errors and warnings detected by HTML checker

--- a/team.html
+++ b/team.html
@@ -22,6 +22,7 @@
         </section>
 
       <article class="flex-p-article">
+      <h3></h3>
       <nav class="flex-p-nav">
         <ul class="flex-c-nav">
           <li class="flex-c-nav"><a href="index.html">Home</a></li>
@@ -78,25 +79,22 @@
   </main>
 
   <footer class="flex-p-footer">
-    <section>
+ 
    <pre>
    
    <strong class="footer-strong" >Webmaster for The Daniels - Their Film and Me Site</strong>
    <a href="mailto:cican42814@gmail.com">Email Webmaster</a>
-   <p>&nbsp;&nbsp;&nbsp;&nbsp; &copy 2024</p>
+   &copy; 2024
    </pre>
-    </section>
 
-    <section class="flex-footer2">
-      <pre>
+
+      <pre class="flex-footer2">
 
       <strong class="footer-strong">Site Development Resources</strong>
       <a href="https://www.w3schools.com/">W3Schools</a>
       <a href="https://pixabay.com/images/search/dimensions/">Pixabay</a>
       </pre>
-    </section>
 
-    <section class="flex-footer3">
         <nav class="flex-p-footer-nav">
           <ul class="ul-flex-footer3">
             <li class="flex-c-nav"><a href="index.html">Home</a></li>
@@ -105,7 +103,7 @@
             <li class="flex-c-nav"><a href="team.html">Meet Our Team</a></li>
           </ul>
         </nav>
-    </section>
+ 
   </footer>
 
 
