Made further corrections and enhancements

--- a/team.html
+++ b/team.html
@@ -17,12 +17,9 @@
   </header>
 
   <main>
-        <section>
-          <h2 class="meet-team">Meet Our Team</h2>
-        </section>
+
 
       <article class="flex-p-article">
-      <h3></h3>
       <nav class="flex-p-nav">
         <ul class="flex-c-nav">
           <li class="flex-c-nav"><a href="index.html">Home</a></li>
@@ -32,8 +29,10 @@
         </ul>
       </nav>
       <!-- In order to create items within a flexbox, each item must be placed in its own container (header, article, section,etc. For these nav links, it would be easier to use the unordered list items which creates a container for each item with <li> -->
-  
-    <section class="flex-section1">
+    
+      <h2 class="h2-team">Meet Our Team</h2>
+
+     <section class="flex-section1">
       <h3>Ellip Sis</h3>
       <h4>Software Development Manager</h4>
         <figure>
@@ -80,7 +79,7 @@
 
   <footer class="flex-p-footer">
  
-   <pre>
+   <pre class="flex-footer1">
    
    <strong class="footer-strong" >Webmaster for The Daniels - Their Film and Me Site</strong>
    <a href="mailto:cican42814@gmail.com">Email Webmaster</a>
