--- a/team.html
+++ b/team.html
@@ -16,8 +16,7 @@
     <h1>The Daniels - Their Film and Me</h1>
   </header>
 
-  <main>
-
+  <main id="main-team">
 
       <article class="flex-p-article">
       <nav class="flex-p-nav">
@@ -72,7 +71,7 @@
         </p>
     </section>
  
-  <button class="sign-in-team">Sign In</button>
+  <a href="#main-team" target="_self"><button class="sign-in-team">Sign In</button></a>
 
   </article>
   </main>
@@ -104,12 +103,6 @@
         </nav>
  
   </footer>
-
-
-
-
-
-
 
 </body>
 
