Linking Sign In button to <main> on same page caused error. Unlinked it.

--- a/team.html
+++ b/team.html
@@ -16,7 +16,7 @@
     <h1>The Daniels - Their Film and Me</h1>
   </header>
 
-  <main id="main-team">
+  <main>
 
       <article class="flex-p-article">
       <nav class="flex-p-nav">
@@ -71,7 +71,7 @@
         </p>
     </section>
  
-  <a href="#main-team" target="_self"><button class="sign-in-team">Sign In</button></a>
+  <button class="sign-in-team">Sign In</button>
 
   </article>
   </main>
