Changed order of contents

--- a/team.html
+++ b/team.html
@@ -16,9 +16,7 @@
     <h1>The Daniels - Their Film and Me</h1>
   </header>
 
-  <main>
-
-      <article class="flex-p-article">
+  <main class="flex-main">
       <nav class="flex-p-nav">
         <ul class="flex-c-nav">
           <li class="flex-c-nav"><a href="index.html">Home</a></li>
@@ -29,8 +27,10 @@
       </nav>
       <!-- In order to create items within a flexbox, each item must be placed in its own container (header, article, section,etc. For these nav links, it would be easier to use the unordered list items which creates a container for each item with <li> -->
     
-      <h2 class="h2-team">Meet Our Team</h2>
+    <h2 class="h2-team">Meet Our Team</h2>
 
+    <article class="flex-p-article">
+    
      <section class="flex-section1">
       <h3>Ellip Sis</h3>
       <h4>Software Development Manager</h4>
@@ -71,9 +71,7 @@
         </p>
     </section>
  
-
-
-  </article>
+   </article>
   </main>
 
   <footer class="flex-p-footer">
