--- a/Test2.html
+++ b/Test2.html
@@ -16,7 +16,7 @@
       <a href="index.html" target="_self"><img class="logo-grid" src="images/logo4-resized.png"
       alt="site logo with two Earths separated by an explosive flash with the intitials for the site">
       </a>
-      <h1>The Daniels - Their Film and Me</h1>
+      <h1 class="h1-grid">The Daniels - Their Film and Me</h1>
     </header>
 
     <nav class="nav-grid">
@@ -38,6 +38,7 @@
           </p>
           <p class="p-grid">Creative energy flows freely amongst us, providing eccentric experiences to our clientele.</p>
       </section>
+      
 
       <h2 class="sec sec2">Meet Our Team</h2>
 
