--- a/Test2.html
+++ b/Test2.html
@@ -47,7 +47,7 @@
         <h4>Software Development Manager</h4>
         <figure>
           <img src="images/humanoid-ti.png" alt="humanoid staring at ground" class="grid-img1">
-          <figcaption class="figcaption">Ellip at what is left of Yellowstone National Park</figcaption>
+          <figcaption>Ellip at what is left of Yellowstone National Park</figcaption>
         </figure>
         <p>Skillfully builds the skeleton of our site with HTML (HyperText Markup Language). Produces a pleasing
         effects via general CSS (Cascading Style Sheets) and CSS Box Model. Utilizes CSS Flexbox so our audiences enjoy the benefits of responsive web design.</p>
