Changed page names to product.html and product-grid.css. Added products.html navigation link to all site pages.

--- a/faq.html
+++ b/faq.html
@@ -23,6 +23,7 @@
     <a href="faq.html">Frequently Asked Questions</a>
     <a href="contact-us.html">Contact Us</a>
     <a href="team.html">Meet Our Team</a>
+    <a href="products.html">What We Do</a>
   </nav>
 
     <aside class="aside">
