--- a/team.html
+++ b/team.html
@@ -23,6 +23,7 @@
           <li class="flex-c-nav"><a href="faq.html">Frequently Asked Questions</a></li>
           <li class="flex-c-nav"><a href="contact-us.html">Contact Us</a></li>
           <li class="flex-c-nav"><a href="team.html">Meet Our Team</a></li>
+          <li class="nav-grid-c"><a href="products.html">What We Do</a></li>
         </ul>
       </nav>
       <!-- In order to create items within a flexbox, each item must be placed in its own container (header, article, section,etc. For these nav links, it would be easier to use the unordered list items which creates a container for each item with <li> -->
@@ -96,6 +97,7 @@
             <li class="flex-c-nav"><a href="faq.html">Frequently Asked Questions</a></li>
             <li class="flex-c-nav"><a href="contact-us.html">Contact Us</a></li>
             <li class="flex-c-nav"><a href="team.html">Meet Our Team</a></li>
+            <li class="nav-grid-c"><a href="products.html">What We Do</a></li>
           </ul>
         </nav>
  
