Corrected errors and warning found by HTML checker.

--- a/products.html
+++ b/products.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Daniels - Their Film and Me</title>
   <link rel="stylesheet" href="css/products-grid.css">
-  <link rel="favicon.ico">
-  <link rel="apple-icon.png">
+  <link rel="shortcut icon" href="favicon.ico">
+  <link rel="apple-touch-icon" href="apple-icon.png">
 </head>
 
 <body class="body-grid">
